AM_CXXFLAGS= -DNO_VIZ @AM_CXXFLAGS@

noinst_LIBRARIES = libz.a

libz_a_SOURCES= adler32.c   deflate.h  gzread.c   inffixed.h  trees.c    zutil.c \
	compress.c  gzwrite.c  inflate.c   trees.h    zutil.h \
	crc32.c     gzclose.c  infback.c  inflate.h   uncompr.c \
	crc32.h     gzguts.h   inffast.c  inftrees.c  zconf.h \
	deflate.c   gzlib.c    inffast.h  inftrees.h  zlib.h
	
